@@ -45,6 +45,7 @@ make install DESTDIR=%{buildroot}
 %defattr(644,root,root,755)
 %attr(755,root,root) %{_bindir}/gttlvdump
 %attr(755,root,root) %{_bindir}/gttlvgrep
+%attr(755,root,root) %{_bindir}/gttlvwrap
 %dir %{_datadir}/%{name}
 %{_datadir}/%{name}/ksi.desc
 %{_datadir}/%{name}/logsig.desc
